# ocaml2evm

./: .gitignore  LICENSE  README.md  SimpleStrage.json  abi_json.ml  anormal.ml  dune  main.ml  ocamyul.ml  ocamyul.opam  package-lock.json  package.json  simple_storage.ml  test.ml  two_storage.ml  yul_ast.ml  yul_ast.mli
.github/workflows/: ci.yml
contracts/: SimpleStorage.json  TwoStorage.json
driver/: dune  main.ml
lib/: dune  primitives.ml  primitives.mli
sample/: README.md  deploy_erc20.js  package-lock.json  package.json
sample/contract_test/: ERC20.test.js  SimpleHash.test.js  SimpleStorage.test.js  SimpleStorageIf.test.js  TwoStorage.test.js
sample/contracts/: ERC20.json  SimpleHash.json  SimpleStorage.json  SimpleStorageIf.json  TwoStorage.json
sample/src/: dune  erc20.ml  simple_hash_if.ml  simple_hash_table.ml  simple_storage.ml  simple_storage_if.ml  two_storage.ml
src/: abi.ml  abi.mli  abi_json.ml  abi_json.mli  anormal.ml  anormal.mli  anormal_ir.ml  anormal_ir.mli  dune  normalized_ast.ml  normalized_ast.mli  normalized_common_ast.ml  normalized_common_ast.mli  normalized_ir_ast.ml  normalized_ir_ast.mli  ocamyul.ml  ocamyul.mli  utils.ml  utils.mli  yul_ast.ml  yul_ast.mli  yul_compile.ml  yul_compile.mli
test/: SimpleStorage.test.js  TwoStorage.test.js
